Activity admin iteration. See #3660. * Fix "n activities per screen" option not working (and only load on the index screen). * Fix activity type filter drop down. * Fix PHP warnings when the index screen tried to truncate activity item's contents. * Add "bp_activity_use_akismet" filter to allow Akismet integration with Activity to be disabled. * Add first version of the Activity edit screen, and its contextual help text.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5435 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-activity/admin/css/admin.dev.css
+++ b/bp-activity/admin/css/admin.dev.css
@@ -30,3 +30,12 @@
 	margin-right: 10px;
 	margin-top: 1px;
 }
+
+#wp-bp-activities-content-wrap {
+	margin-top: 20px;
+}
+#post-body #bp-activities-action_resize,
+#post-body #bp-activities-content_resize {
+	position: inherit;
+	margin-top: -2px;
+}
